// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bigbed formats loads small bigbed file 1`] = `
Array [
  Object {
    "chrom": "chr7",
    "chromEnd": 73584,
    "chromStart": 54028,
    "name": "uc003sii.2",
    "reserved": "255,0,0",
    "score": 0,
    "spID": "AL137655",
    "strand": -1,
    "thickEnd": 54028,
    "thickStart": 54028,
    "uniqueId": "bb-277248",
  },
  Object {
    "chrom": "chr7",
    "chromEnd": 61569,
    "chromStart": 60328,
    "name": "uc010krx.1",
    "reserved": "255,0,0",
    "score": 0,
    "spID": "PDGFA",
    "strand": -1,
    "thickEnd": 60328,
    "thickStart": 60328,
    "uniqueId": "bb-277306",
  },
  Object {
    "chrom": "chr7",
    "chromEnd": 63529,
    "chromStart": 62967,
    "name": "uc003sij.2",
    "reserved": "255,0,0",
    "score": 0,
    "spID": "DQ576410",
    "strand": -1,
    "thickEnd": 63366,
    "thickStart": 62967,
    "uniqueId": "bb-277361",
  },
  Object {
    "chrom": "chr7",
    "chromEnd": 64107,
    "chromStart": 64068,
    "name": "uc003sil.1",
    "reserved": "255,0,0",
    "score": 0,
    "spID": "DQ584609",
    "strand": -1,
    "thickEnd": 64068,
    "thickStart": 64068,
    "uniqueId": "bb-277419",
  },
  Object {
    "chrom": "chr7",
    "chromEnd": 65220,
    "chromStart": 65159,
    "name": "uc003sim.1",
    "reserved": "255,0,0",
    "score": 0,
    "spID": "DQ600587",
    "strand": -1,
    "thickEnd": 65159,
    "thickStart": 65159,
    "uniqueId": "bb-277477",
  },
]
`;

exports[`bigbed formats searchExtraIdex returns null on file with no extra index 1`] = `
Array [
  Object {
    "chromId": 0,
    "end": 9000,
    "field": 3,
    "rest": "EDEN.1	1000	+	1200	7608	0,0,0	4	451,903,501,2001	0,1950,3950,5950	EDEN	EDEN	-	-	-",
    "start": 1049,
    "uniqueId": "bb-358912",
  },
]
`;

exports[`bigbed formats searchExtraIndex in bigbed with multiple extra indexes on the gene name index 1`] = `
Array [
  Object {
    "chromId": 0,
    "end": 50562905,
    "field": 13,
    "rest": "ENST00000406915.3	1000	-	50551247	50556405	0,0,0	3	291,109,48	0,5185,11746	ENSG00000217442.3	SYCE3	protein_coding	protein_coding	basic,appris_principal,exp_conf,CCDS",
    "start": 50551111,
    "uniqueId": "bb-49149691",
  },
  Object {
    "chromId": 0,
    "end": 50556432,
    "field": 13,
    "rest": "ENST00000402753.1	1000	-	50551247	50556405	0,0,0	2	206,136	0,5100	ENSG00000217442.3	SYCE3	protein_coding	protein_coding	basic,appris_principal,CCDS",
    "start": 50551196,
    "uniqueId": "bb-49149869",
  },
]
`;

exports[`bigbed formats searchExtraIndex name in gencode 1`] = `
Array [
  Object {
    "chromId": 0,
    "end": 50799305,
    "field": 3,
    "rest": "ENST00000467796.2	1000	+	0	0	0,0,0	3	41,121,651	0,1919,15401	ENSG00000184319.12	RPL23AP82	processed_transcript	transcribed_unprocessed_pseudogene	-",
    "start": 50783253,
    "uniqueId": "bb-49157973",
  },
]
`;
